ARROW-8438: [C++] Fix crash in io-memory-benchmark